examples/test/testpolicy857.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy857
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key23: value39
      key33: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value26
          key34: value3
          key28: value10
      podSelector:
        matchLabels:
          key23: value23
          key1: value42
          key22: value12
